# prefixr

./: .gitignore  README.md  install.sh  package-lock.json  package.json  pyproject.toml
dashboard/: package.json
docs/: CURSOR.md
landing/: DEPLOY.md  index.html  package.json  vercel.json
prefixr/: __init__.py  cache.py  cli.py  client.py  config.py  context.py  events.py  proxy.py  scheduler.py  summarizer.py
prefixr/providers/: __init__.py  anthropic.py  base.py  deepseek.py  gemini.py  openai.py
prefixr/static/: index.html
tests/: conftest.py  test_adapters.py  test_cache.py  test_proxy.py  test_scheduler.py
