[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prefixr"
version = "0.1.0"
description = "Local-first, provider cache-aware context scheduler for LLM API calls"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Prefixr" }]
keywords = ["llm", "cache", "anthropic", "openai", "proxy", "cost-optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn[standard]>=0.32",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[project.scripts]
prefixr = "prefixr.cli:main"

[project.urls]
Homepage = "https://prefixr.dev"
Repository = "https://github.com/svijay11/prefixr"

[tool.hatch.build.targets.wheel]
packages = ["prefixr"]

[tool.hatch.build.targets.sdist]
include = ["prefixr/", "README.md", "install.sh"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
